--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ header {
     .text {
       flex-shrink: 99;
     }
-    
+
     .images {
       width: 424px;
       height: 456px;
@@ -124,6 +124,21 @@ header {
   &.promo-sea {
     background-image: url("images/spain.png");
   }
+
+  .container {
+    padding-top: 220px;
+
+    .content {
+      width: 648px;
+      height: 344px;
+      background-color: #232323e6;
+      padding: 44px 32px;
+
+      .promo-sea & {
+        margin-left: auto;
+      }
+    }
+  }
 }
 
 .testimonials {
@@ -140,6 +155,11 @@ header {
 
   .testimonial {
     height: 280px;
+    display: flex;
+
+    .text {
+      padding: 48px 60px;
+    }
   }
 }
 
@@ -147,4 +167,12 @@ footer {
   text-align: center;
   height: 268px;
   background-color: #000;
+  padding: 80px 0;
+
+  .social {
+    display: flex;
+    justify-content: space-between;
+    width: 275px;
+    margin: auto;
+  }
 }
