--- a/style.css
+++ b/style.css
@@ -28,11 +28,66 @@ header {
         height: max-content;
         width: max-content;
         margin: auto;
+
+        >button {
+          margin: 211px auto 0;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          gap: 4px;
+
+        }
       }
+    }
+
+    h1 {
+      font-family: "Josefin Sans", sans-serif;
+      font-weight: bold;
+      font-size: 48px;
+      line-height: 52px;
+      margin-bottom: 0;
+      text-transform: uppercase;
+    }
+
+    h2 {
+      margin-top: 8px;
+      font-family: "Josefin Sans", sans-serif;
+      font-size: 22px;
+      font-weight: normal;
+      line-height: 28px;
+      letter-spacing: 7px;
+      margin-bottom: 48px;
     }
 
     form {
       background: #fff;
+      width: 647px;
+      height: 60px;
+      padding: 4px 5px 4px 36px;
+      display: flex;
+      gap: 10px;
+
+      input {
+        flex-grow: 1;
+        color: #000;
+        font-family: "Josefin Sans", sans-serif;
+        font-size: 14px;
+        line-height: 20px;
+        letter-spacing: 3px;
+      }
+
+      button {
+        background-color: var(--accent);
+        padding: 16px 24px;
+        display: flex;
+        gap: 12px;
+        
+        span {
+          font-size: 14px;
+          line-height: 20px;
+          text-transform: uppercase;
+        }
+      }
     }
   }
 
@@ -49,6 +104,14 @@ header {
       justify-content: space-between;
       height: 100%;
       align-items: center;
+
+      h2 {
+        font-family: "Josefin Sans", sans-serif;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 28px;
+        text-transform: uppercase;
+      }
 
       menu {
         display: flex;
@@ -168,6 +231,14 @@ footer {
   height: 268px;
   background-color: #000;
   padding: 80px 0;
+
+  h2 {
+    font-family: "Josefin Sans", sans-serif;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 28px;
+    text-transform: uppercase;
+  }
 
   .social {
     display: flex;
