--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ header {
 }
 
 .promo {
-  height: 684px;
+  min-height: 684px;
   background-size: cover;
   background-position: center;
 
@@ -226,16 +226,44 @@ header {
   }
 
   .container {
-    padding-top: 220px;
+    padding: 220px 0 40px;
 
     .content {
       max-width: 648px;
-      height: 344px;
+      min-height: 344px;
       background-color: #232323e6;
       padding: 44px 32px;
+      font-family: "Josefin Sans", sans-serif;
 
       .promo-sea & {
         margin-left: auto;
+      }
+
+      h3 {
+        font-weight: 300;
+        font-size: 20px;
+        line-height: 28px;
+        margin-bottom: 16px;
+      }
+
+      h2 {
+        text-transform: uppercase;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 28px;
+      }
+
+      p {
+        margin: 16px 0 24px;
+        font-weight: 300;
+        line-height: 28px;
+        letter-spacing: 2px;
+      }
+
+      button {
+        padding: 20px 56px;
+        background-color: var(--accent);
+        text-transform: uppercase;
       }
     }
   }
@@ -251,11 +279,15 @@ header {
     text-align: center;
     height: 40px;
     margin: 60px 0;
+    font-size: 36px;
+    line-height: 40px;
+    font-weight: normal;
   }
 
   .testimonial {
     min-height: 280px;
     display: flex;
+    font-family: "Josefin Sans", sans-serif;
 
     img {
       max-width: 50%;
@@ -264,6 +296,20 @@ header {
 
     .text {
       padding: 48px 60px;
+      background-color: #333;
+
+      h3 {
+        text-transform: uppercase;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 28px;
+        margin-bottom: 10px;
+      }
+      
+      p {
+        font-weight: 300;
+        line-height: 28px;
+      }
     }
   }
 }
@@ -273,6 +319,7 @@ footer {
   height: 268px;
   background-color: #000;
   padding: 80px 0;
+  font-family: "Josefin Sans", sans-serif;
 
   h2 {
     font-family: "Josefin Sans", sans-serif;
@@ -280,6 +327,15 @@ footer {
     font-size: 24px;
     line-height: 28px;
     text-transform: uppercase;
+  }
+
+  h3 {
+    margin-top: 8px;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 3px;
+    margin-bottom: 20px;
   }
 
   .social {
